--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
     "stripe": "^14.9.0",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.1.0",
